[gd_scene load_steps=4 format=3 uid="uid://btbd2iw3sg8mv"]

[ext_resource type="Script" path="res://entities/items/items_scripts/item_component.gd" id="1_ystqr"]
[ext_resource type="Texture2D" uid="uid://bkg6lotq1fb84" path="res://assets/textures/prototypes/selectable_item.png" id="2_nephp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mavwj"]
radius = 6.0

[node name="ItemComponent" type="Area2D" groups=["item"]]
light_mask = 2
visibility_layer = 2
collision_layer = 16
script = ExtResource("1_ystqr")

[node name="ItemSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_nephp")

[node name="ItemCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mavwj")

[node name="PresenceChecker" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(115, 0)
scale = Vector2(0.55, 0.725)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="PresenceChecker" to="." method="_on_presence_checker_screen_exited"]
